--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -13,5 +13,5 @@ jobs:
       - uses: actions/checkout@v4
       - run: |
           aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 137068255381.dkr.ecr.us-east-1.amazonaws.com
-          docker build -t 137068255381.dkr.ecr.us-east-1.amazonaws.com/roboshop-schema-load:${{ github.sha }} .
-          docker push 137068255381.dkr.ecr.us-east-1.amazonaws.com/roboshop-schema-load:${{ github.sha }}
+          docker build -t 137068255381.dkr.ecr.us-east-1.amazonaws.com/roboshop-schema-load:latest .
+          docker push 137068255381.dkr.ecr.us-east-1.amazonaws.com/roboshop-schema-load:latest
